<resources>
    <string name="app_name">Планировщик тренировок</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="MON">ПН</string>
    <string name="TUE">ВТ</string>
    <string name="WED">СР</string>
    <string name="THU">ЧТ</string>
    <string name="FRI">ПТ</string>
    <string name="SAT">СБ</string>
    <string name="SUN">ВС</string>
    <string name="channel_name">Название канала</string>
    <string name="channel_description">Описание канала</string>
    <string name="load_from_templates_button">Загрузить из шаблона</string>
    <string name="add_new_workout">Добавить тренировку</string>
    <string name="add_workout_template">Создать шаблон тренировки</string>
    <string name="no_planned_workouts">На этот день нет запланированных тренировок</string>
    <string name="input_name">Введите название тренировки</string>
    <string name="save">Сохранить</string>
    <string name="your_workout_name">Название тренировки</string>
    <string name="delete_exercise">×</string>
    <string name="unable_to_create_workout">Этот день уже прошел</string>
    <string name="choose_exercise">Выберите упражнение из списка:</string>
    <string name="choose_approaches">Выберите количество подходов:</string>
    <string name="choose_repeats">Выберите количество повторений:</string>
    <string name="need_to_input_name">Введите название тренировки</string>
    <string name="choose_template">Выберите шаблон:</string>
    <string name="no_templates_yet">Вы еще не создали ни одного шаблона</string>
    <string name="already_planned_today">Уже запланирован на сегодня</string>
    <string name="template_already_exists">Шаблон с таким именем уже существует</string>
    <string name="workout_already_exists">Тренировка с этим именем уже запланирована</string>
    <string name="templates_list_empty_info">Тут будут шаблоны Ваших тренировок</string>
    <string name="templates_list_info">Шаблоны Ваших тренировок:</string>
    <string name="tap_on_template_asking">Нажмите, чтобы получить информацию о шаблоне</string>
    <string name="tap_on_workout_asking">Нажмите, чтобы получить информацию о тренировке</string>
    <string name="mark_completed">Выполнить</string>
    <string name="completed">Выполнено</string>
    <string name="template_info">Информация о шаблоне:</string>
    <string name="workout_info">Информация о тренировке:</string>
    <string name="get_motivation">Зарядиться вайбом</string>
    <string name="your_statistics">Ваша статистика за все время: </string>
    <string name="workouts_count">Общее количество запланированных тренировок: </string>
    <string name="completed_workouts_count">Количество выполненных\nтренировок: </string>
    <string name="completed_workouts_length">Общая длительность\nтренировок: </string>
    <string name="the_most_preferred_exercise">Любимое упражнение:\n</string>
    <string name="update_statistics">Обновить статистику</string>
    <string name="sure_delete_template">Вы уверены, что хотите удалить шаблон?</string>
    <string name="sure_delete_workout">Вы уверены, что хотите удалить тренировку?</string>
    <string name="delete">Удалить</string>
    <string name="delete_template">Удаление шаблона</string>
    <string name="cancel">Отмена</string>
    <string name="delete_workout">Удаление тренировки</string>
    <string name="template_deleted">Шаблон удален</string>
    <string name="workout_deleted">Тренировка удалена</string>
    <string name="not_exists">отсутствует</string>
    <string name="planning_workout_from_template">Планирование тренировки</string>
    <string name="sure_use_this_template">Запланировать тренировку, используя этот шаблон?</string>
    <string name="plan">Запланировать</string>
    <string name="workout_planned">Тренировка запланирована</string>
    <string name="template_created">Шаблон создан</string>
</resources>