<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="8dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/MON"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="8dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/TUE"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="8dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/WED"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="8dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/THU"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="8dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/FRI"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="8dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/SAT"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="8dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/SUN"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="16sp"/>

</LinearLayout>