<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/darkThemeBackgroundColor"
    tools:context=".fragment.MonthCalendarFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/monthBackButton"
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/get_previous_month"
            android:textColor="@color/white"
            android:backgroundTint="@color/darkThemeBackgroundColor"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/monthMonthYearTV"
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/monthNextButton"
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/get_next_month"
            android:backgroundTint="@color/darkThemeBackgroundColor"
            android:textColor="@color/white"
            android:background="@null"
            android:textStyle="bold"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/MON"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TUE"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/WED"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/THU"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/FRI"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/SAT"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/SUN"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="16sp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/monthCalendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="634dp" />

    <FrameLayout
        android:id="@+id/containerBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:behavior_hideable="true"
        app:behavior_peekHeight="100dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>